--------------------------------------------------------------------------------
yjh 01.06.2022 17:39:33 +0300 - build  5974

1. Fix GPF (in 32bit release) when build with VS2022 (19.32)

--------------------------------------------------------------------------------
drkns 01.06.2022 00:54:02 +0100 - build 5973

1. Improve exception diagnostics.

2. Use Clang and GCC maps for stack traces enrichment.

--------------------------------------------------------------------------------
drkns 29.05.2022 20:03:12 +0100 - build 5972

1. Improve exception diagnostics.

2. Validate command line arguments.

--------------------------------------------------------------------------------
drkns 25.05.2022 01:00:56 +0100 - build 5971

1. Continue 5970.

--------------------------------------------------------------------------------
drkns 24.05.2022 21:18:27 +0100 - build 5970

1. Intercept heap corruption.

--------------------------------------------------------------------------------
yjh 07.05.2022 22:32:09 +0300 - build 5969

1. SQLite v3.38.5.

--------------------------------------------------------------------------------
yjh 05.05.2022 01:02:21 +0300 - build 5968

1. SQLite v3.38.4.

--------------------------------------------------------------------------------
yjh 28.04.2022 01:20:26 +0300 - build 5967

1. SQLite v3.38.3.

--------------------------------------------------------------------------------
drkns 24.04.2022 17:14:58 +0100 - build 5966

1. 0003940: Editor crash when changing codepage to UTF16BE.

--------------------------------------------------------------------------------
drkns 18.04.2022 03:16:06 +0100 - build 5965

1. Correction of 5955.1.

--------------------------------------------------------------------------------
yjh 28.03.2022 12:19:04 +0300 - build 5964

1. SQLite v3.38.2.

--------------------------------------------------------------------------------
drkns 24.02.2022 01:23:37 +0000 - build 5963

1. Improve SQLite diagnostics.
