@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+drkns 03.06.2022 22:47:43 +0100 - build 5975
+
+1. Another day, another workaround for Windows 10 console.
+
+2. More logging.
+
+--------------------------------------------------------------------------------
 yjh 01.06.2022 17:39:33 +0300 - build  5974
 
 1. Fix GPF (in 32bit release) when build with VS2022 (19.32)
